Prevent wrapping of mortgage calculator tabs
CSS for "small screen" mode kicks in at 570px instead of the standard
480px as the design for the mortgage calculator is non-standard

--- a/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
+++ b/app/assets/stylesheets/mortgage_calculator/components/_mortgagecalc.scss
@@ -56,12 +56,12 @@
 
 .mortgagecalc__panel {
   @include column(12);
-  @include respond-to($mq-s) {
+  @include respond-to($mortgagecalc_mq-s) {
     @include column(6);
   }
 
   &.mortgagecalc__panel--full {
-    @include respond-to($mq-s) {
+    @include respond-to($mortgagecalc_mq-s) {
       @include column(12);
     }
   }
@@ -104,7 +104,7 @@
 }
 
 .mortgagecalc__spread {
-  @include respond-to($mq-s) {
+  @include respond-to($mortgagecalc_mq-s) {
     width: 48%;
   }
 }
